--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -29,7 +29,7 @@
 
         h3 {
             font-style: italic; 
-            font-size: smaller; /
+            font-size: smaller; 
             color: #555; 
         }
 
