adding the intake page which currently features a recorder which saves recordings to the tempaudio file.  however for some reason the audio recording is not picking up any sound. it is saving files of the correct length (if you look in the tempaudio folder that is being created within the docker) but no sound is being recorded.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -120,40 +120,7 @@
         </div>
     </div>
 
-    <script>
-        document.getElementById("startIntakeBtn").addEventListener("click", function() {
-            document.getElementById("intakeForm").style.display = "block";
-            this.style.display = "none";
-        });
-
-        document.getElementById("intakeForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-
-            const formData = {
-                client_name: document.getElementById("client_name").value,
-                type: document.getElementById("type").value,
-                description: document.getElementById("description").value,
-                contact: document.getElementById("contact").value,
-            };
-
-            fetch(this.action, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(formData),
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
-                document.getElementById("intakeForm").style.display = "none";
-                document.getElementById("thankYouMessage").style.display = "block";
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
-        });
-    </script>
+<script src="/templates/index.js"></script>
 </body>
 
 </html>
