--- a/server/templates/intake.html
+++ b/server/templates/intake.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="audio-recording-container">
-        <h1 class="title">Audio Recording API Demo</h1>
+        <h1 class="title">Audio Recording API Demo Case ID: {{.case_id}}</h1>
         <i class="start-recording-button fa fa-microphone" aria-hidden="true"></i>
         <div class="recording-contorl-buttons-container hide">
             <i class="cancel-recording-button fa fa-times-circle-o" aria-hidden="true"></i>
@@ -38,6 +38,9 @@
     <audio controls class="audio-element hide">
     </audio>
 
+    <script>
+        const case_id = "{{.case_id}}";
+    </script>
     <script src="/templates/audio-recording.js"></script>
     <script src="/templates/intake.js"></script>
 </body>
