--- a/server/templates/intake.html
+++ b/server/templates/intake.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <title>Audio Recording API Demo</title>
-    <link rel="stylesheet" href="/templates/style.css">
+    <link rel="stylesheet" href="/templates/style_recorder.css">
     <link rel="stylesheet" href="/templates/reset.css">
     <link rel="stylesheet" href="/templates/font-awesome.css">
 </head>
