--- a/server/templates/style.css
+++ b/server/templates/style.css
@@ -1,316 +1,140 @@
-/* style.css*/
-/* based on "how to record audio in JavaScript by Reema Alzohairi *
- https://ralzohairi.medium.com/audio-recording-in-javascript-96eed45b75ee */
-/* Media Queries */
 
-/* Small Devices*/
 
-@media (min-width: 0px) {
-    * {
-        box-sizing: border-box;
-    }
-    body {
-        margin: 0;
-        padding: 0;
-        background-color: lightcyan;
-        color: #414142;
-        position: relative;
-        font-family: monospace;
-    }
-    .title {
-        font-size: 30px;
-        margin-bottom: 55px;
-        text-align: center;
-    }
-    .audio-recording-container {
-        width: 100%;
-        height: 100vh;
-        /* view port height*/
-        /*targeting Chrome & Safari*/
-        display: -webkit-flex;
-        /*targeting IE10*/
-        display: -ms-flex;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        /*horizontal centering*/
-        align-items: center;
-    }
-    .start-recording-button {
-        font-size: 70px;
-        color: #435f7a;
-        cursor: pointer;
-        opacity: .5;
-        margin-bottom: 30px;
-    }
-    .start-recording-button:hover {
-        opacity: 1;
-    }
-    .recording-contorl-buttons-container {
-        /*targeting Chrome & Safari*/
-        display: -webkit-flex;
-        /*targeting IE10*/
-        display: -ms-flex;
-        display: flex;
-        justify-content: space-evenly;
-        /*horizontal centering*/
-        align-items: center;
-        width: 334px;
-        margin-bottom: 30px;
-    }
-    .cancel-recording-button,
-    .stop-recording-button {
-        font-size: 70px;
-        cursor: pointer;
-    }
-    .cancel-recording-button {
-        color: red;
-        opacity: 0.7;
-    }
-    .cancel-recording-button:hover {
-        color: rgb(206, 4, 4);
-    }
-    .stop-recording-button {
-        color: #33cc33;
-        opacity: 0.7;
-    }
-    .stop-recording-button:hover {
-        color: #27a527;
-    }
-    .recording-elapsed-time {
-        /*targeting Chrome & Safari*/
-        display: -webkit-flex;
-        /*targeting IE10*/
-        display: -ms-flex;
-        display: flex;
-        justify-content: center;
-        /*horizontal centering*/
-        align-items: center;
-    }
-    .red-recording-dot {
-        font-size: 25px;
-        color: red;
-        margin-right: 12px;
-        /*transitions with Firefox, IE and Opera Support browser support*/
-        animation-name: flashing-recording-dot;
-        -webkit-animation-name: flashing-recording-dot;
-        -moz-animation-name: flashing-recording-dot;
-        -o-animation-name: flashing-recording-dot;
-        animation-duration: 2s;
-        -webkit-animation-duration: 2s;
-        -moz-animation-duration: 2s;
-        -o-animation-duration: 2s;
-        animation-iteration-count: infinite;
-        -webkit-animation-iteration-count: infinite;
-        -moz-animation-iteration-count: infinite;
-        -o-animation-iteration-count: infinite;
-    }
-    /* The animation code */
-    @keyframes flashing-recording-dot {
-        0% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-    @-webkit-keyframes flashing-recording-dot {
-        0% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-    @-moz-keyframes flashing-recording-dot {
-        0% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-    @-o-keyframes flashing-recording-dot {
-        0% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-    .elapsed-time {
-        font-size: 32px;
-    }
-    .recording-contorl-buttons-container.hide {
-        display: none;
-    }
-    .overlay {
-        position: absolute;
-        top: 0;
-        height: 100vh;
-        width: 100%;
-        background-color: rgba(82, 76, 76, 0.35);
-        /*targeting Chrome & Safari*/
-        display: -webkit-flex;
-        /*targeting IE10*/
-        display: -ms-flex;
-        display: flex;
-        justify-content: center;
-        /*horizontal centering*/
-        align-items: center;
-    }
-    .overlay.hide {
-        display: none;
-    }
-    .browser-not-supporting-audio-recording-box {
-        /*targeting Chrome & Safari*/
-        display: -webkit-flex;
-        /*targeting IE10*/
-        display: -ms-flex;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        /*horizontal centering*/
-        align-items: center;
-        width: 317px;
-        height: 119px;
-        background-color: white;
-        border-radius: 10px;
-        padding: 15px;
-        font-size: 16px;
-    }
-    .close-browser-not-supported-box {
-        cursor: pointer;
-        background-color: #abc1c05c;
-        border-radius: 10px;
-        font-size: 16px;
-        border: none;
-    }
-    .close-browser-not-supported-box:hover {
-        background-color: #92a5a45c;
-    }
-    .close-browser-not-supported-box:focus {
-        outline: none;
-        border: none;
-    }
-    .audio-element.hide {
-        display: none;
-    }
-    .text-indication-of-audio-playing-container {
-        height: 20px;
-    }
-    .text-indication-of-audio-playing {
-        font-size: 20px;
-    }
-    .text-indication-of-audio-playing.hide {
-        display: none;
-    }
-    /* 3 Dots animation*/
-    .text-indication-of-audio-playing span {
-        /*transitions with Firefox, IE and Opera Support browser support*/
-        animation-name: blinking-dot;
-        -webkit-animation-name: blinking-dot;
-        -moz-animation-name: blinking-dot;
-        -o-animation-name: blinking-dot;
-        animation-duration: 2s;
-        -webkit-animation-duration: 2s;
-        -moz-animation-duration: 2s;
-        -o-animation-duration: 2s;
-        animation-iteration-count: infinite;
-        -webkit-animation-iteration-count: infinite;
-        -moz-animation-iteration-count: infinite;
-        -o-animation-iteration-count: infinite;
-    }
-    .text-indication-of-audio-playing span:nth-child(2) {
-        animation-delay: .4s;
-        -webkit-animation-delay: .4s;
-        -moz-animation-delay: .4s;
-        -o-animation-delay: .4s;
-    }
-    .text-indication-of-audio-playing span:nth-child(3) {
-        animation-delay: .8s;
-        -webkit-animation-delay: .8s;
-        -moz-animation-delay: .8s;
-        -o-animation-delay: .8s;
-    }
-    /* The animation code */
-    @keyframes blinking-dot {
-        0% {
-            opacity: 0;
-        }
-        50% {
-            opacity: 1;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-    /* The animation code */
-    @-webkit-keyframes blinking-dot {
-        0% {
-            opacity: 0;
-        }
-        50% {
-            opacity: 1;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-    /* The animation code */
-    @-moz-keyframes blinking-dot {
-        0% {
-            opacity: 0;
-        }
-        50% {
-            opacity: 1;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-    /* The animation code */
-    @-o-keyframes blinking-dot {
-        0% {
-            opacity: 0;
-        }
-        50% {
-            opacity: 1;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
+/* Styles for main page */ 
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #fafafa;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
 }
 
-/* Medium devices */
+.container {
+  width: 90%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  position: relative; 
+}
 
-@media (min-width: 768px) {}
+h1, h2 {
+    color: #333;
+}
 
-/* Large devices */
+h3 {
+    font-style: italic; 
+    font-size: smaller; 
+    color: #555; 
+}
 
-@media (min-width: 992px) {}
+p {
+    margin: 10px 0;
+    color: #666;
+}
 
-/*Ipad pro view*/
+.button, .loginButton,
+input[type="submit"] {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
 
-/* 
-  @media (min-width: 1024px) {
-  
-  } */
 
-/* Extra Large devices */
+.loginButton {
+  padding: 5px 10px; 
+  font-size: 14px; 
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
 
-@media (min-width: 1200px) {}
+.button:hover, .loginButton:hover, input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+#intakeForm, #thankYouMessage {
+    text-align: left;
+    margin-top: 20px;
+    display: none; /* Hide elements initially */
+}
+
+label {
+    display: block;
+    margin: 15px 0 5px;
+}
+
+input[type="text"], textarea {
+    width: 95%;
+    padding: 8px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+
+
+textarea {
+    height: 100px;
+    resize: vertical;
+}
+
+.name-fields {
+    display: flex;
+    justify-content: start; 
+    gap: 20px; 
+    width: 95%; 
+}
+
+.field-group {
+    display: flex;
+    flex-direction: column;
+    width:95%;
+    box-sizing: border-box;
+}
+
+#intakeForm small {
+    display: block;
+    margin-top: -8px; /* Adjusts the space between the input and the directions */
+    margin-bottom: 10px;
+    font-size: 0.8em; /* Smaller font size */
+    color: #666; /* Dim color for less emphasis */
+}
+
+
+select {
+    font-family: inherit; /* Ensures dropdown uses the same font as the form */
+    font-size: 16px; /* Adjust as needed to match other input fields */
+    padding: 2px 2px; /* Provides padding inside the dropdown */
+    margin-right: 20px; /* Optional: adds space to the right of the select, if needed */
+    width: auto; /* Adjusts width automatically based on content */
+}
+
+.case-type-group  {
+    display: flex;
+    align-items: top; 
+   
+}
+
+.case-type-group label {
+    margin-right: 10px; /* Adjust based on spacing preference */
+}
+
+
+
+@media (max-width: 600px) {
+    .field-group {
+        flex-basis: 100%; /* Stacks the fields vertically on smaller screens */
+    }
+}
 
