Created a lawyer login page and modified to authenticate, but the "Gorilla Session" isn't setting itself properly.  WIll probably need to re-attack using javascript cookies.

--- a/server/templates/style.css
+++ b/server/templates/style.css
@@ -61,7 +61,7 @@ input[type="submit"] {
     background-color: #0056b3;
 }
 
-#intakeForm, #thankYouMessage {
+#intakeForm, #thankYouMessage, #unknownAccountMessage {
     text-align: left;
     margin-top: 20px;
     display: none; /* Hide elements initially */
