--- a/server/templates/lawyer-login.html
+++ b/server/templates/lawyer-login.html
@@ -27,7 +27,8 @@
                     <span class="error-message" id="password_error"></span>
                 </div>
             </div>
-            <button id="submit" class="button">Login</button> <button id="create-account" class="button">New Account</button>
+            <button id="submit" class="button" style="margin-top:10px">Login</button> 
+            <button id="new-account" class="button" style="margin-top:10px" onclick="window.location.href='/new-account'">New Account</button>
         </div>
         
         <div id="unknownAccountMessage">
