--- a/server/templates/display-cases.html
+++ b/server/templates/display-cases.html
@@ -10,7 +10,7 @@
         document.getElementById('lawyerId').textContent = lawyerId;
         document.getElementById('lawyerIdDisplay').style.display = 'block';
     } else {
-        window.location.href = '/login'; // Redirect to login page.
+        window.location.href = '/lawyer-login'; // Redirect to login page.
     }
 </script>
 <script src="/templates/lawyer-login.js"></script>
