Adding logout functionality

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,7 +12,9 @@
     <div class="container">
         <h1><img src="/templates/robot_logo.png" height="40px">AI-Assisted Intake</h1>
         <h3>Welcome. This is a case tracking and intake system that utilizes AI. Please start by filling in the form below with your details. Provide as many details in this form as you can to help your lawyer conduct a better interview.</h3>
-        <a href="/lawyer-login" class="button loginButton">Lawyer Login</a>
+        <a href="/lawyer-login" class="button loginButton" id="loginButton">Lawyer Login</a>
+        <a href="/display-cases" class="button lawyerView" id="lawyerView">Lawyer View</a>
+        <a href="/log-out" class="button logoutButton" id="logoutButton">Logout</a>
         <button id="startIntakeBtn" class="button">Start Intake</button>
 
         <div id="intakeForm">
