--- a/server/templates/meeting-details.html
+++ b/server/templates/meeting-details.html
@@ -6,6 +6,12 @@
     <title>AI Intake Assistant - Meeting Details</title>
     <link rel="stylesheet" href="/templates/style.css">
 </head>
+<script>
+    var GLOBALS = {
+        meetingId: "{{.meeting_id}}",
+        caseId: "{{.case_id}}"
+     };
+</script>
 <body>
     <div class="container">
         <h1><img src="/templates/robot_logo.png" height="40px"> Meeting Details</h1>
